# framework_cg

./: README.md  alarmistica.py  pyproject.toml
framework_cg/: __init__.py  conn.py  extract.py  loader.py  transformer.py
